2007-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt: Yet more clarificatin, thanks Peter Geoghegan
2007-08-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Convert float types with full precision, thanks Denis Dzyubenko
 win32/INSTALL.txt:
  - Don't use same libpq for debug and release, thanks Peter Geoghegan
2007-08-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Made the bit about copying config headers a bit clearer.
2007-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx, test/test043.cxx:
  - Use difference_type instead of size_type to indicate positions
2007-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README:
  - Documented PGPASSWORD, thanks Andrew Maclean
  - Documented how to set environment variables, thanks Andrew Maclean
 src/tablewriter.cxx:
  - Double-escape binary data, thanks Peter Schuller
 win32/INSTALL.txt:
  - Documented how to create Windows makefiles, thanks Andrew Maclean
2007-07-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/tablewriter.cxx:
  - Fix for escaping binary data in COPY mode, thanks Peter Schuller
2007-07-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - Exported prepared_def, thanks Daniel Frey
2007-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger.hxx:
  - Fixed wrong doxygen tag
2007-06-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am:
  - Added notify-listen headers
 tools/preprelease:
  - Print errors to stderr
2007-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, libpqxx.spec.in, NEWS, README:
  - The thaiopensource.org hostname no longer works; it's now pqxx.org
2007-05-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx:
  - Fixed some raw HTML that was showing up wrong in docs, thanks Trigve Siver
2007-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added some warning options for g++ 4.2.0